--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ html {
   scroll-margin: 0 !important;
 }
 
-.card{
+.card {
   border-left: 0 !important;
   border-top: 0 !important;
   border-bottom: 0 !important;
@@ -23,41 +23,63 @@ html {
   /* padding-right: 20px; */
 }
 
-.card-body{
+.card-body {
   padding-left: 0 !important;
   padding-right: 0 !important;
   padding-top: 12px !important;
 }
 
-.card-text{
+.card-text {
   margin-bottom: 0;
 }
 
-.card-title{
+.card-title {
   font-size: .88em;
   text-align: center;
 }
 
-.card-text .text-muted a{
+.card-text .text-muted a {
   color: #0099FF !important;
   text-decoration: none !important;
 }
 
-.card-text{
+.card-text {
   margin-top: 7px;
 }
 
-.card-img-top{
+.card-img-top {
   width: 70% !important;
   /* height: 50% !important; */
 }
 
-#service_section-wrapper{
+#service_section-wrapper {
   margin-top: 17%;
 }
 
-#service_section-titlewrapper{
+#service_section-titlewrapper {
   margin-bottom: 5%;
+}
+
+#service_title-lead {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+#service_title-lead::before,
+#service_title-lead::after {
+  content: '';
+  flex: 1;
+  border-bottom: 1px solid #000;
+}
+
+#service_title-lead:not(:empty)::before {
+  margin-right: .25em;
+}
+
+#service_title-lead:not(:empty)::after {
+  margin-left: .25em;
 }
 
 /* #service-title-lead{
@@ -76,6 +98,7 @@ html {
   /* right: -5%; */
   left: -8%;
 }
+
 /* Lines of the Toggler */
 .toggler-icon {
   width: 30px;
@@ -419,26 +442,30 @@ html {
     padding-top: 4%;
   }
 
-  .border-left{
+  .border-left {
     display: none;
   }
 
-  #service_title-lead{
+  #service_title-lead {
     font-size: .9em;
+    display: flex;
+    align-items: center;
+    text-align: center;
   }
-  
-  #service_title{
+
+  #service_title {
     font-size: 1.1em;
   }
 
-  #service_section-titlewrapper{
+  #service_section-titlewrapper {
     margin-bottom: 12%;
   }
 
-  .card-title{
+  .card-title {
     font-size: 1.1em;
   }
-  .card-text{
+
+  .card-text {
     font-size: .8em;
   }
 }
@@ -623,22 +650,23 @@ html {
     padding-top: 4%;
   }
 
-  #service_title-lead{
+  #service_title-lead {
     font-size: .9em;
   }
-  
-  #service_title{
+
+  #service_title {
     font-size: 1.1em;
   }
 
-  #service_section-titlewrapper{
+  #service_section-titlewrapper {
     margin-bottom: 12%;
   }
 
-  .card-title{
+  .card-title {
     font-size: 1.1em;
   }
-  .card-text{
+
+  .card-text {
     font-size: .8em;
   }
 }
@@ -797,35 +825,35 @@ html {
     padding-top: 0;
   }
 
-  #about_section{
+  #about_section {
     margin-top: 12% !important;
   }
 
-  #about_section--maintext{
-   font-size: .68rem !important;
+  #about_section--maintext {
+    font-size: .68rem !important;
   }
 
-  #trusted_companies-banner{
+  #trusted_companies-banner {
     margin-top: 15% !important;
   }
-  
+
   #about_section--button {
     font-size: .6em !important;
   }
 
-  #service_title-lead{
+  #service_title-lead {
     font-size: 1em;
   }
-  
-  #service_title{
+
+  #service_title {
     font-size: 1.5em;
   }
 
-  #service_section-titlewrapper{
+  #service_section-titlewrapper {
     margin-bottom: 5%;
   }
 
-  .card-title{
+  .card-title {
     font-size: .95em;
     margin-bottom: .1em !important;
   }
@@ -897,19 +925,19 @@ html {
     font-size: .7em !important;
   }
 
-  .card-title{
+  .card-title {
     font-size: 1.2em;
   }
 
-  .card-img-top{
+  .card-img-top {
     width: 45% !important;
   }
 
-  .card-text{
+  .card-text {
     font-size: .95em;
   }
 
-  .border-left{
+  .border-left {
     left: -5.4%;
   }
 }
@@ -997,17 +1025,18 @@ html {
     font-size: 1em !important;
   }
 
-  #about_section--title h6{
+  #about_section--title h6 {
     font-size: 30px !important;
   }
 
-  .card-img-top{
+  .card-img-top {
     width: 50% !important;
   }
 
-  .border-left{
+  .border-left {
     left: -4.5%;
   }
+
   /* #ali_logo{
     width: 20% !important;
   } */
