- Increased the font size of service section's read more links

--- a/index.css
+++ b/index.css
@@ -494,6 +494,10 @@ html {
   .card-img-top {
     width: 55% !important;
   }
+
+  .card-text .text-muted a{
+    font-size: 1em;
+  }
 }
 
 
@@ -703,6 +707,10 @@ html {
 
   .card-img-top {
     width: 45% !important;
+  }
+
+  .card-text .text-muted a{
+    font-size: 1em;
   }
 }
 
