- Made width 80% on card body on mobile l viewport only apply to that viewport and not cascade to tablet and beyond

--- a/index.css
+++ b/index.css
@@ -748,7 +748,7 @@ html {
   .card-body {
     margin: 0 auto;
     text-align: center;
-    width: 80% !important;
+    width: 80%;
   }
 
   .card-img-top {
