- Testing out setting width to card text instead of card body to get a smaller more condensed container for mobile L

--- a/index.css
+++ b/index.css
@@ -748,11 +748,16 @@ html {
   .card-body {
     margin: 0 auto;
     text-align: center;
-    width: 80%;
+    /* width: 80%; */
   }
 
   .card-img-top {
     width: 40% !important;
+  }
+
+  .card-text{
+    width: 80%;
+    margin: 0 auto;
   }
 }
 
