--- a/index.css
+++ b/index.css
@@ -748,17 +748,17 @@ html {
   .card-body {
     margin: 0 auto;
     text-align: center;
-    /* width: 80%; */
+    width: 80%;
   }
 
   .card-img-top {
     width: 40% !important;
   }
 
-  .card-text{
+  /* .card-text{
     width: 80%;
     margin: 0 auto;
-  }
+  } */
 }
 
 
