--- a/index.css
+++ b/index.css
@@ -698,6 +698,8 @@ html {
 
   .card-text {
     font-size: .8em;
+    width: 80%;
+    margin: 0 auto;
   }
 
   .card-body {
@@ -929,6 +931,11 @@ html {
   .card-body {
     width: unset;
     text-align: unset;
+  }
+
+  .card-text{
+    margin: unset;
+    width: unset;
   }
 
   .card-img-top {
