--- a/index.css
+++ b/index.css
@@ -800,8 +800,8 @@ html {
     font-size: .86em !important;
   }
 
-  p .text-muted{
-    font-size: .7em;
+  p .text-muted a{
+    font-size: 1.1em !important;
   }
 }
 
