--- a/index.css
+++ b/index.css
@@ -97,6 +97,36 @@ html {
   margin-left: .25em;
 }
 
+#footer {
+  margin-top: 17%;
+  color: white;
+  opacity: 1;
+  background: linear-gradient(90deg, rgba(71, 166, 206, 1) 0%, rgba(42, 117, 156, 1) 47%, rgba(15, 71, 109, 1) 100%);
+}
+
+#footer-contact {
+  padding-left: 4%;
+}
+
+#footer-contact--title {
+  margin-bottom: 0;
+}
+
+#footer-contact--a1 {
+  font-family: Arial, Helvetica, sans-serif !important;
+  margin-bottom: 0;
+}
+
+#footer-contact--a2 {
+  font-family: Arial, Helvetica, sans-serif !important;
+  margin-bottom: 0;
+}
+
+#footer-contact--email {
+  font-family: Arial, Helvetica, sans-serif !important;
+  margin-bottom: 0;
+}
+
 
 .owl-theme .owl-dots .owl-dot:focus {
   outline: none;
@@ -559,6 +589,41 @@ html {
   #fp_logo {
     width: 70%;
   }
+
+  #footer-contact--title {
+    font-size: 1.4em;
+    padding-bottom: 1.5%;
+    text-align: center;
+  }
+
+  #footer-contact--a1 {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-contact--a2 {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-contact--email {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-ql--title{
+    font-size: 1em;
+    text-align: center;
+    padding-top: 5%;
+  }
+  #footer-about--title{
+    font-size: 1em;
+    text-align: center;
+  }
+  #footer-nl--title{
+    font-size: 1em;
+    text-align: center;
+  }
 }
 
 
@@ -783,6 +848,41 @@ html {
 
   #fp_logo {
     width: 70%;
+  }
+
+  #footer-contact--title {
+    font-size: 1.4em;
+    padding-bottom: 1.5%;
+    text-align: center;
+  }
+
+  #footer-contact--a1 {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-contact--a2 {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-contact--email {
+    font-size: 1em;
+    text-align: center;
+  }
+
+  #footer-ql--title{
+    font-size: 1em;
+    text-align: center;
+    padding-top: 5%;
+  }
+  #footer-about--title{
+    font-size: 1em;
+    text-align: center;
+  }
+  #footer-nl--title{
+    font-size: 1em;
+    text-align: center;
   }
 
   /* Samsung s22 ultra is in this category */
@@ -1476,4 +1576,4 @@ html {
   /* .owl-theme .owl-dots span:active {}
 } */
 
-} 
+}
