--- a/index.css
+++ b/index.css
@@ -363,6 +363,10 @@ html {
   font-family: Arial, Helvetica, sans-serif !important;
 }
 
+/* #nl-emailarea{
+  border-radius: 0;
+} */
+
 /* #footer-contact--soctitle{
   font-size: 1em;
   font-family: Arial, Helvetica, sans-serif !important;
@@ -605,6 +609,7 @@ html {
   #fp_logo {
     width: 70%;
   }
+
   #footer-contact {
     padding-bottom: 8%;
   }
@@ -630,7 +635,7 @@ html {
   #footer-contact--email {
     font-size: 1em;
     text-align: center;
-    padding-top: .7%;
+    padding-top: 2%;
   }
 
   #footer-ql--title {
@@ -660,6 +665,21 @@ html {
   .social-icons {
     width: 8%;
     margin-left: 3px;
+  }
+
+  #footer-nl {
+    position: relative;
+    text-align: center;
+  }
+
+  #nl-emailarea{
+    height: 40px;
+  }
+
+  #nl-submit{
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 40px ;
   }
 }
 
@@ -908,7 +928,7 @@ html {
   #footer-contact--email {
     font-size: 1em;
     text-align: center;
-    padding-top: .7%;
+    padding-top: 2%;
   }
 
   #footer-ql--title {
@@ -932,7 +952,7 @@ html {
   }
 
   #footer-contact {
-    padding-bottom: 5%;
+    padding-bottom: 7%;
   }
 
   #social {
@@ -944,14 +964,31 @@ html {
     margin-left: 3px;
   }
 
-  /* #footer-contact--soctitle{
+  #footer-nl {
+    position: relative;
+    text-align: center;
+  }
+
+  #nl-emailarea{
+    height: 40px;
+  }
+
+  #nl-submit{
+    padding-top: 0;
+    padding-bottom: 0;
+    height: 40px ;
+  }
+}
+
+
+/* #footer-contact--soctitle{
     font-size: 1em;
     font-family: Arial, Helvetica, sans-serif !important;
     font-weight: bold;
     display: none;
   } */
 
-  /* #footer-contact--title {
+/* #footer-contact--title {
     font-size: 1.4em;
     padding-bottom: 1.5%;
     text-align: center;
@@ -987,8 +1024,7 @@ html {
     text-align: center;
   } */
 
-  /* Samsung s22 ultra is in this category */
-}
+/* Samsung s22 ultra is in this category */
 
 
 /* Mobile M - L Buffer */
@@ -1295,6 +1331,7 @@ html {
   #footer-nl--title {
     padding-top: 10%;
     font-size: .8em;
+    text-align: left;
   }
 
   #footer {
@@ -1314,6 +1351,11 @@ html {
   #social {
     text-align: left;
   }
+
+  #footer-nl {
+    position: relative;
+    text-align: left;
+  }
 }
 
 /* Tablet - Laptop Buffer*/
@@ -1325,6 +1367,14 @@ html {
 @media only screen and (min-width: 970px) {
   .jumbotron {
     height: 850px;
+  }
+
+  #footer {
+    height: 11em;
+  }
+
+  #footer-contact {
+    padding-bottom: 0%;
   }
 
   .navbar-brand {
